# installer

./: README.md  meson.build
data/: application.css  horizon-installer.desktop.in  horizon-installer.gresource.xml  horizon-installer.policy  installer.desktop  installer.session  io.elementary.installer.desktop.in  io.elementary.installer.gresource.xml  meson.build
debian/: changelog  control  copyright  files  horizon-installer-session.gsettings-override  horizon-installer.install
po/: ar.po  fr.po  io.elementary.installer.pot  pt.po
po/extra/: POTFILES  az.po  bg.po  bn.po  ca.po  ckb.po  cs.po  da.po  de.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  extra.pot  fa.po  fi.po  fr.po  fr_CA.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ku.po  lt.po  lv.po  mi.po  ms.po  my.po  nb.po  nl.po  no.po  ny.po  pl.po  pt.po  pt_BR.po  (+14 more)
src/: Application.vala
src/Views/: EncryptView.vala  ProgressView.vala  SuccessView.vala  TryInstallView.vala  User.vala
